# web-hse-2022

./: README.md  database.md  pyproject.toml  setup.cfg  test_main.http
app/: contracts.py  db.py  main.py  routers.py
brocker/: README.md  docker-compose.yml  pyproject.toml  test_main.http
brocker/src/: consumer.py  main.py  producer.py
brocker/test/: test.py
db/: hashtag.json  meme.json  meme_hashtag.json
grpc/: README.md  client.py  endpoints.py  fastapi_server.py  frogs.py  grpc_server.py  pytest.ini  requirements.txt  test.py
grpc/definitions/: service.proto
grpc/definitions/builds/: service_pb2.py  service_pb2_grpc.py
src/: db.py  main.py  routers.py
src/model/: hashtag.py  meme.py
src/repository/: meme_repository.py  meme_repository_impl.py
test/: test_repositories.py
test/db/: hashtag.json  meme.json  meme_hashtag.json
