[tool.poetry]
name = "brocker"
version = "0.1.0"
description = ""
authors = ["Alexandra Olemskaya <alexandra.olemskaya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
pika = "^1.3.1"
redis = "^4.3.4"
pytest = "^7.2.0"
pexpect = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
